@@ -24,6 +24,9 @@ void   view_new_cmd_callback                    (GtkAction *action,
 void   view_close_cmd_callback                  (GtkAction *action,
                                                  gpointer   data);
 
+void   view_scroll_center_cmd_callback          (GtkAction *action,
+                                                 gpointer   data);
+
 void   view_zoom_fit_in_cmd_callback            (GtkAction *action,
                                                  gpointer   data);
 void   view_zoom_fill_cmd_callback              (GtkAction *action,
