@@ -46,6 +46,8 @@ Usability:
   - Improve mouse wheel zooming behavior to keep the same point
     centered under the pointer even if the image is completely visible
     in the canvas.
+  - Add "View -> Center Image in Window" (Shift+J) as a quick way to
+    center the image at any zoom level.
 
 Translations:
 
